# LiveTalking

./: .env  .gitignore  FRONTEND_DEPLOY_GUIDE.md  QUICK_DEPLOY.md  README.md  SERVICE_GUIDE.md  app.py  baseasr.py  basereal.py  build-frontend-local.sh  debug_doubao_protocol.py  lightreal.py  lipasr.py  lipreal.py  livetalking-daemon.sh  llm.py  musereal.py  nohup.out  pyproject.toml  requirements_full.txt  run_livetalking.py  start-all.sh  start_quick.py  system_prompt.py  tencentasr.py  test_llm_tts.py  ttsreal.py  webrtc.py  整理完成总结.md
.github/workflows/: build-windows.yml
demo/: __init__.py  demo_tencent_asr.py
deploy/: INSTALL.md  README.md  backend.sh  control.sh  deploy.sh  livetalking-backend.service  livetalking.conf  run_backend.sh
deploy/frontend/: .dockerignore  Dockerfile  deploy.sh  docker-compose.yml  nginx.conf
desktop_app/: package.json  vite.config.ts
desktop_app/src-tauri/: tauri.conf.json
docker/: .env.example  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.local  README.md  deploy-frontend-local.sh  deploy.sh  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.yml  nginx.conf  srs.conf
docker/frontend-dist/: build-info.txt
docs/: AVATAR_GUIDE.md  DEPENDENCIES.md  DEPENDENCY_SOLUTION.md  QUICK_START.md  SESSION_ISOLATION.md  WAV2LIP384_MIGRATION_PLAN.md
docs/architecture/: DEPLOYMENT_GUIDE.md  README.md  SOLUTION_SUMMARY.md  WEBSOCKET_OPTIMIZATION_GUIDE.md
docs/configuration/: 火山引擎TTS配置说明.md
docs/guides/: FILE_ORGANIZATION_PLAN.md  PROJECT_STRUCTURE.md  audio_quality.md  gemini3pro.md  启动说明.md  整理完成最终总结.md
docs/plans/: 2026-03-13-avatar-creation-implementation.md  2026-03-13-avatar-creation-redesign.md  2026-03-13-avatar-selection-design.md  (+5 more)
fixes/: fix_doubao_tts.py  fix_doubao_tts2.py  fix_doubao_tts_queue.py  simple_audio_fix.py  ultimate_audio_fix.py
livetalking_pkg/: __init__.py  start_quick_fixed.py
scripts/: check_deps.py  check_services.py  ensure_deps.py  fix_deps.sh  install_deps.sh  livetalking-daemon.sh  quick_test.sh  service_health_check.py  start-all.sh  start_with_quality.sh  stop-all.sh  switch_config.py  tts_sim_test.py
src/: tts_service.py
temp/: placeholder.txt
test/: test_tencent_asr.py  test_tencent_asr_integration.py  test_tencent_simple.py
tests/: debug_audio.py  test_audio_quality.py  test_doubao_audio.py  test_doubao_fix.py  test_doubao_token.py  test_doubao_tts_fix.py  test_fix_simple.py  test_queue_fix.py  test_tencent_doubao.py
wav2lip/: __init__.py  genavatar384.py
(+125 files in other folders)
