[tool.poetry]
name = "livetalking"
version = "0.1.0"
description = "Real-time interactive streaming digital human"
authors = ["lipku"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=2.0.0"
torchvision = "*"
torchaudio = "*"
torch-ema = "*"
ninja = "*"
trimesh = "*"
opencv-python = "*"
tensorboardX = "*"
numpy = "*"
pandas = "*"
tqdm = "*"
matplotlib = "*"
PyMCubes = "*"
rich = "*"
dearpygui = "*"
packaging = "*"
scipy = "*"
scikit-learn = "*"
face_alignment = "*"
python_speech_features = "*"
numba = "*"
resampy = "*"
soundfile = "0.12.1"
einops = "*"
configargparse = "*"
lpips = "0.1.3"
imageio-ffmpeg = "*"
transformers = "4.46.2"
edge_tts = "*"
flask = "*"
flask_sockets = "*"
opencv-python-headless = "*"
aiortc = "*"
aiohttp_cors = "*"
ffmpeg-python = "*"
omegaconf = "*"
diffusers = "*"
accelerate = "*"
librosa = "*"
openai = "*"
websockets = "12.0"
gradio_client = "*"
azure-cognitiveservices-speech = "*"
mcp = "*"
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
